Update model version.

--- a/templates/app.html
+++ b/templates/app.html
@@ -87,9 +87,9 @@
           </label>
         </div>
         <div class="row">
-          <label class="checkbox">
-            <input type="checkbox" id="model" name="latest" value="builtin/latest" checked>
-            Use latest model
+          <label class="model-label">
+            <input type="text" id="model" name="latest" value="builtin/experiment4">
+            Model Version
           </label>
         </div>
       </div>
